hphp/test/slow/autoload/autoload-fail.php.expectf
Fatal error: A name is expected here. in %s/test/slow/autoload/autoload-fail-c.inc on line 4
